[b]Version 0.6.8[/b]:

(2009-03-23)
 * (Experimental) Now some of the submenus can be added to the toolbars
   (actions names: speed_menu, videotrack_menu, screen_menu, videosize_menu, 
   panscan_menu, aspect_menu, deinterlace_menu, videofilter_menu, rotate_menu, 
   ontop_menu, audiotrack_menu, audiofilter_menu, audiochannels_menu, 
   stereomode_menu, subtitlestrack_menu, titles_menu, chapters_menu, 
   angles_menu, osd_menu).

(2009-03-22)
 * Added an icon for the next_aspect action. Contributed by TT 
   (http://smplayer.berlios.de/forums/viewtopic.php?id=1104).

(2009-03-20)
 * The subtitle and audio delay actions keep now the file paused. They also
   display the current value in the status bar.

(2009-03-19)
 * Added some icons for: Help -> Tips, Video -> Preview, Video -> Start/stop
   taking screenshots, Subtitles -> Find subtitles on opensubtitles.org and
   updated the Qt logo (taken from the Qt sources).

(2009-03-18)
 * (Videopreview) Ctrl+H toggles displaying the info about the video.
 * Don't use "set_property switch_video" when using the nsv demuxer. It makes
   mplayer stop displaying the video after a few seconds.
 * Added a new option: Video -> Start/stop taking screenshots (of each frame)
   assigned by default to "Shift+D" (the icon for this action: screenshots.png)
   When this option is selected, a screenshot will be taken (and saved in
   png format to the screenshot folder) for each frame. Select the option
   again to stop taking screenshots. 

(2009-03-16)
 * (Windows) Now by default the combos in Preferences -> Drives will show all
   drives, not only CD/DVD devices, as it has been reported that checking
   for those devices can be slow if there are network drives. Now there's
   a button "Scan for CD/DVD devices" to force the detection of CD/DVD devices.

(2009-03-12)
 * Deleted the obsolete translations from smplayer_gl.ts (caused lrelease
   to fail with Qt 4.5.0).

(2009-03-11)